--- a/index.html
+++ b/index.html
@@ -1238,10 +1238,10 @@ td.edit {
   const daftarWarga = [
     "ADI MBAH PITA", "AGUNG TRIARSO", "AGUS PURBOYONO", "AGUS SUHERMAN", "AHMAD JAUHARUL FARID",
     "ALI FATAH", "ALI IMRON", "AMIN SETYONO", "ARIS SAMITIO", "BENNY", "BUDI BAGUS SANTOSO",
-    "DASUKI", "FAIZIN", "GIANTO ZAINI", "HARNO", "HARTOPO", "JOKO MBAK YANA", "KOZIN", "KUSNADI",
+    "DASUKI", "DIMAS", "FAIZIN", "GIANTO ZAINI", "HARTOPO", "JOKO MBAK YANA", "KOZIN", "KUSNADI",
     "MARIYO", "MOCH ALY MAS AD", "MUHAMMAD AGUS", "NGALI", "NUR AZIS", "NUR KHOLISH",
     "PAULUS IRAWAN", "PURWANTO", "RAGIL SANTOSO", "REZA", "RISTANTO ARIS SAPUTRO",
-    "RIZKI AGUNG UTOMO", "ROS HARMANTO", "SARJO", "SLAMET", "SLAMET UTOMO", "SOLEKAN",
+    "RIZKI AGUNG UTOMO", "ROFIAH (ALM. SUHARNO)", "ROS HARMANTO", "SARJO", "SLAMET", "SLAMET UTOMO", "SOLEKAN",
     "SUBCHAN", "SUGIONO", "SUGIYANTO", "SUJONO", "SUPRIYADI", "SUPRIYANTO", "SUWITO",
     "SUYANTONO", "UMAR SADLI", "WIDODO", "YUSUF LUKMAN HAKIM", "YOGA", "YOLANDA"
   ];
@@ -1253,7 +1253,7 @@ td.edit {
     "GRUP 4": ["AMIN SETYONO", "FAIZIN", "GIANTO ZAINI", "KOZIN", "SUGIYANTO", "YUSUF LUKMAN HAKIM"],
     "GRUP 5": ["HARTOPO", "MUHAMMAD AGUS", "NUR AZIS", "NUR KHOLISH", "SLAMET UTOMO", "SUPRIYANTO"],
     "GRUP 6": ["KUSNADI", "PAULUS IRAWAN", "ROS HARMANTO", "SARJO", "YOGA", "-"], 
-    "GRUP 7": ["ARIS SAMITIO", "HARNO", "PURWANTO", "SOLEKAN", "SUJONO", "-"],
+    "GRUP 7": ["ARIS SAMITIO", "DIMAS", "PURWANTO", "SOLEKAN", "SUJONO", "-"],
     "GRUP 8": ["BENNY", "JOKO MBAK YANA", "MOCH ALY MAS AD", "NGALI", "SLAMET", "SUPRIYADI"], 
     "BUKAN PETUGAS": ["BUKAN PETUGAS"],
   };
@@ -2070,3 +2070,4 @@ document.addEventListener("DOMContentLoaded", tampilkanRiwayat);
   </script>
 </body>
 </html>
+
