--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ td.edit {
 
 
 <!-- Tombol untuk reset semua data dari tampilan awal -->
-<p class="reset-link" onclick="handleResetFromAbsen()">🔒 Reset Data</p>
+<!--  <p class="reset-link" onclick="handleResetFromAbsen()">🔒 Reset Data</p> -->
 
 <style>
   .reset-link {
@@ -1518,7 +1518,7 @@ function masukApp() {
  //  const sudahReset = localStorage.getItem("sudahReset");
 
  // if (sudahReset !== "true") {
-    alert("💪 #IndonesiaSalingJaga");
+   // alert("💪 #IndonesiaSalingJaga");
   //  return;
  // }
 
@@ -2070,6 +2070,7 @@ document.addEventListener("DOMContentLoaded", tampilkanRiwayat);
   </script>
 </body>
 </html>
+
 
 
 
