--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 .btn-masuk {
   padding: 12px 24px;
   font-size: 18px;
-  background: rgb(55, 14, 14); /* warna saat nonaktif */
+  background: rgb(0, 200, 0); /* hijau menyala saat nonaktif */
   color: #ffffff;
   font-weight: 600;
   border: none;
@@ -711,6 +711,8 @@ td.edit {
     <h2 style="margin-bottom: 20px; font-size: 18px; font-weight: 600;">Semangat Bertugas</h2>
 
 
+
+    
   <!-- Dropdown untuk memilih grup petugas -->
   <select id="groupSelect" style="
   appearance: none;
@@ -2070,6 +2072,7 @@ document.addEventListener("DOMContentLoaded", tampilkanRiwayat);
   </script>
 </body>
 </html>
+
 
 
 
