--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@ td.edit {
   const daftarWarga = [
     "ADI MBAH PITA", "AGUNG TRIARSO", "AGUS PURBOYONO", "AGUS SUHERMAN", "AHMAD JAUHARUL FARID",
     "ALI FATAH", "ALI IMRON", "AMIN SETYONO", "ARIS SAMITIO", "BENNY", "BUDI BAGUS SANTOSO",
-    "DASUKI", "DIMAS", "FAIZIN", "GIANTO ZAINI", "HARTOPO", "JOKO MBAK YANA", "KOZIN", "KUSNADI",
+    "DASUKI", "BIMAS", "FAIZIN", "GIANTO ZAINI", "HARTOPO", "JOKO MBAK YANA", "KOZIN", "KUSNADI",
     "MARIYO", "MOCH ALY MAS AD", "MUHAMMAD AGUS", "NGALI", "NUR AZIS", "NUR KHOLISH",
     "PAULUS IRAWAN", "PURWANTO", "RAGIL SANTOSO", "REZA", "RISTANTO ARIS SAPUTRO",
     "RIZKI AGUNG UTOMO", "ROFIAH (ALM. SUHARNO)", "ROS HARMANTO", "SARJO", "SLAMET", "SLAMET UTOMO", "SOLEKAN",
@@ -1255,7 +1255,7 @@ td.edit {
     "GRUP 4": ["AMIN SETYONO", "FAIZIN", "GIANTO ZAINI", "KOZIN", "SUGIYANTO", "YUSUF LUKMAN HAKIM"],
     "GRUP 5": ["HARTOPO", "MUHAMMAD AGUS", "NUR AZIS", "NUR KHOLISH", "SLAMET UTOMO", "SUPRIYANTO"],
     "GRUP 6": ["KUSNADI", "PAULUS IRAWAN", "ROS HARMANTO", "SARJO", "YOGA", "-"], 
-    "GRUP 7": ["ARIS SAMITIO", "DIMAS", "PURWANTO", "SOLEKAN", "SUJONO", "-"],
+    "GRUP 7": ["ARIS SAMITIO", "BIMAS", "PURWANTO", "SOLEKAN", "SUJONO", "-"],
     "GRUP 8": ["BENNY", "JOKO MBAK YANA", "MOCH ALY MAS AD", "NGALI", "SLAMET", "SUPRIYADI"], 
     "BUKAN PETUGAS": ["BUKAN PETUGAS"],
   };
@@ -2072,6 +2072,7 @@ document.addEventListener("DOMContentLoaded", tampilkanRiwayat);
   </script>
 </body>
 </html>
+
 
 
 
